# labs

./: .gitignore  README.md
2b(1)/: 2b(1).cbp  2b(1).depend  main.cpp
2b(2)/: 2b(2).depend  2b(2).layout  main.cpp
3a/: 3a.depend  3a.layout  main.cpp
3a/trash/: main.cpp  trash.cbp  trash.depend  trash.layout
3c/: main.cpp
lab 1/: Benchmark_bin.txt  Benchmark_sort.txt  lab 1.cbp  lab 1.depend  lab 1.layout  lab3b.h  main.cpp
lab 2a/: Benchmark_dynamic.txt  dynamic_mass.h  lab 2a.depend  lab 2a.layout  main.cpp  spisok.h  static_mass.h
lab4/: binary_tree.h  expr_tree.h  lab4.depend  main.cpp  tree.h
lab5/: Benchmark_struct.txt  lab5.cbp  lab5.depend  lab5.layout  main.cpp  matr.h  strct.h
lab6/: 2-3tree.h  AVL.h  element.h  lab6.depend  lab6.layout  list.h  main.cpp  mass.h  tree.h
lab7/: lab7.depend  lab7.layout  main.cpp
semester2/2b(1)/: 2b(1).depend  2b(1).layout  main.cpp
semester2/2b(2)/: main.cpp
semester2/3a/: Benchmark.txt  main.cpp
semester2/3c/: 3c.layout
semester2/lab 1/: Benchmark_txt.txt  lab3b.h  main.cpp
semester2/lab 2a/: Benchmark_spisok.txt  dynamic_mass.h  main.cpp  static_mass.h
semester4/3a/: CMakeLists.txt  Graph.tpp  README.dm  README.md  algorithms.hpp  benchmark.txt  main.cpp  multiTheadAlgorithms.hpp  test.cpp
semester6/OPK/Lexer/: .clang-format  CMakeLists.txt  main.cpp
semester6/OPK/Lexer/include/: Automata.hpp  Controller.hpp  Lexer.hpp  Token.hpp  Words.hpp
semester6/OPK/Lexer/src/: Automata.cpp  Controller.cpp  Lexer.cpp  Token.cpp
semester6/OPK/Lexer/test/: input.txt  output.txt
(+342 files in other folders)
